--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
             <mat-card-content fxLayout="column" *ngIf="!loading">
               <mat-form-field >
                 <input matInput formControlName="email" type="email"
-                    placeholder="E-mail" autocomplete="email" >
+                    placeholder="E-mail" autocomplete="email" readonly="false">
               </mat-form-field>
               <mat-form-field>
                 <input matInput formControlName="password" type="password"  
@@ -18,7 +18,7 @@
               <div fxLayout="row" fxLayoutAlign="space-between center">
                 <button mat-button color="warn" (click)="loginGoogle()"  type="button" [disabled]="loading" >Google Login</button>
                 <button mat-button color="primary" type="submit" [disabled]="!loginForm.valid || loading"><mat-icon>check</mat-icon>Login</button>
-                <button mat-button color="accent" routerLink="/auth/forgot"><mat-icon>lock_open</mat-icon><u> ESQUECI A SENHA</u></button>
+                <!--button mat-button color="accent" routerLink="/auth/forgot"><mat-icon>lock_open</mat-icon><u> ESQUECI A SENHA</u></button-->
               </div>
             </mat-card-actions>
           <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
